Layout problem solved on info

--- a/info.css
+++ b/info.css
@@ -53,7 +53,7 @@ header {
     /*width: 100%;*/
     /*height: 75vh;*/
     text-align: center;
-    background: #1abc9c;
+    background: cadetblue;
     color: white;
     padding-top: 2%;
     /*font-size: 30px;*/
@@ -141,14 +141,28 @@ body{
 .text{
     font-size: 30px;
     width: 48%;
-    display: inline-block;
+    /*display: inline-block;*/
     float: left;
-    padding: 1%;
+    /*padding: 1%;*/
+    margin-right: 10px;
 }
-.picture{
-    width: 40%;
-    display: inline-block;
+#galleryOfHotspot{
+    /*width: 200px;*/
+    /*display: inline-block;*/
     background-color: brown;
+    float: right;
+}
+.text2{
+    font-size: 30px;
+    clear: both;
+    width: 48%;
+    float: left;
+    margin-right: 10px;
+}
+#googleMapsView{
+    /*clear: both;*/
+    float: right;
+    margin-top: 10%;
 }
 
 
